fix sub_server Makefile not rebuilding when header modified fix sub_common Makefile not rebuilding when char_page.h modified fix sub_client not rebuilding when libcommon has been rebuilt fix sub_server not building sub_common when using the make $(NAME) rule

--- a/sub_common/Makefile
+++ b/sub_common/Makefile
@@ -20,7 +20,7 @@ OBJS := src/ft_putchar_fd.o \
 		src/char_page_pages0.o \
 		src/char_page_pages1.o
 
-INCLUDES := inc/char_pages.h \
+INCLUDES := inc/char_page.h \
 			inc/utils.h
 
 all: $(NAME)
